--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>SITE PRA GAROTA MAIS INCRÍVEL QUE EU JA CONHECI EM TODA MINHA VIDA</h1>
-    <p>i luv u <3</p>
+  <div id="entrada" class="entrada">
+    <button onclick="liberarSite()">Para Yaisha</button>
+  </div>
+
+  <div class="container oculto" id="conteudoSite">
+    <h1>Yaisha, você é o amor da minha vida.</h1>
+    <p>Este site é uma pequena prova do quanto você é especial para mim.</p>
     <button onclick="mostrarMensagem()">Clique aqui, meu amor</button>
     <p id="mensagem"></p>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
