--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </div>
 
   <div class="container oculto" id="conteudoSite">
-    <h1>Yaisha, você é o amor da minha vida.</h1>
-    <p>Este site é uma pequena prova do quanto você é especial para mim.</p>
+    <h1>parabens meu amor</h1>
+    <p>que você tenha um ótimo aniversário meu amor, eu gosto muito de ti minhas princesa, que hoje, dia 16 de maio de 2025, seja o melhor dia que você possa ter, meu amor.</p>
     <button onclick="mostrarMensagem()">Clique aqui, meu amor</button>
     <p id="mensagem"></p>
   </div>
