--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container oculto" id="conteudoSite">
     <h1>parabens meu amor</h1>
-    <p>que você tenha um ótimo aniversário meu amor, eu gosto muito de ti minhas princesa, que hoje, dia 16 de maio de 2025, seja o melhor dia que você possa ter, meu amor.</p>
+    <p>que você tenha um ótimo aniversário meu amor, eu te AMO, minha princesa, que hoje, dia 16 de maio de 2025, seja o melhor dia que você possa ter, meu amor.</p>
     <button onclick="mostrarMensagem()">🤍</button>
     <p id="mensagem"></p>
   </div>
