--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="container oculto" id="conteudoSite">
-    <h1>parabens meu amor</h1>
+    <h1>parabéns meu amor</h1>
     <p>que você tenha um ótimo aniversário meu amor, eu te AMO, minha princesa, que hoje, dia 16 de maio de 2025, seja o melhor dia que você possa ter, meu amor.</p>
     <button onclick="mostrarMensagem()">🤍</button>
     <p id="mensagem"></p>
