--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yaisha, meu amor</title>
+  <title>Yaisha</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="entrada" class="entrada">
-    <button onclick="liberarSite()">Para Yaisha</button>
+  <div id="bloqueio" class="bloqueio">
+    <span class="letra" onclick="liberar()">&lt;3</span>
   </div>
 
-  <div class="container oculto" id="conteudoSite">
-    <h1>parabéns meu amor</h1>
-    <p>que você tenha um ótimo aniversário meu amor, eu te AMO, minha princesa, que hoje, dia 16 de maio de 2025, seja o melhor dia que você possa ter, meu amor.</p>
-    <button onclick="mostrarMensagem()">🤍</button>
-    <p id="mensagem"></p>
-  </div>
+  <div id="conteudo" class="conteudo oculto">
+    <div class="mural">
+      <img src="yaisha.jpg" alt="Yaisha" class="foto" />
+      <h1>my girl</h1>
+      <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
 
-  <script src="script.js"></script>
-</body>
-</html>
+      <!-- Embed do Spotify -->
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height
