--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yaisha</title>
+  <title><3</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="music-controls">
+    <button id="playPauseBtn">▶️</button>
+    <input type="range" id="volumeControl" min="0" max="100" value="100" />
+    <button onclick="changeVolume(-10)">-</button>
+    <button onclick="changeVolume(10)">+</button>
+  </div>
+
   <div id="bloqueio" class="bloqueio">
     <span class="letra" onclick="liberar()"> &lt;3 </span>
   </div>
@@ -19,10 +26,14 @@
     </div>
   </div>
 
-  <!-- Embed de Música -->
   <div class="musica">
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
+
+  <audio id="audioPlayer" loop>
+    <source src="sua_musica.mp3" type="audio/mp3" />
+    Seu navegador não suporta o elemento de áudio.
+  </audio>
 
   <script src="script.js"></script>
 </body>
