--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 </head>
 <body>
   <div id="bloqueio" class="bloqueio">
-    <span class="letra" onclick="liberar()">&lt;3</span>
+    <span class="letra" onclick="liberar()"> &lt;3 </span>
   </div>
 
   <div id="conteudo" class="conteudo oculto">
     <div class="mural">
       <img src="yaisha.jpg" alt="Yaisha" class="foto" />
       <h1>my girl</h1>
-      <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
+      <p>eu AMO essa garota acima, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, parabens meu amor.</p>
     </div>
   </div>
 
-  <audio id="bgMusic" src="musica.mp3" autoplay loop></audio>
+
+  <div class="musica">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  </div>
 
   <script src="script.js"></script>
 </body>
