--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><3</title>
+  <title>i luv my girl <3</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="bloqueio" class="bloqueio">
@@ -15,16 +16,26 @@
     <div class="mural">
       <img src="yaisha.jpg" alt="Yaisha" class="foto" />
       <h1>my girl</h1>
-      <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
-
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <p class="texto-romantico">essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
+      <a href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD?si=_LXeKYiLQrS0XCmZpchgKw&pi=eOdggg2FS2aWl" target="_blank" class="spotify-link">
+        <i class="fab fa-spotify"></i>
+      </a>
     </div>
+
+    <iframe style="display:none" src="https://open.spotify.com/embed/playlist/37i9dQZF1EJMu857BvjtJD?utm_source=generator" width="0" height="0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 
-  <audio autoplay loop>
-    <source src="musica.mp3" type="audio/mpeg" />
-  </audio>
+  <script>
+    function liberar() {
+      document.getElementById('bloqueio').style.display = 'none';
+      document.getElementById('conteudo').classList.remove('oculto');
 
-  <script src="script.js"></script>
+      // Reproduz música de fundo
+      const audio = new Audio('musica.mp3');
+      audio.loop = true;
+      audio.volume = 0.5;
+      audio.play();
+    }
+  </script>
 </body>
 </html>
