--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my girl <3</title>
+  <title>Yaisha</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -22,20 +22,13 @@
       </a>
     </div>
 
-    <iframe style="display:none" src="https://open.spotify.com/embed/playlist/37i9dQZF1EJMu857BvjtJD?utm_source=generator" width="0" height="0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div class="embed-musica">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EJMu857BvjtJD?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
   </div>
 
-  <script>
-    function liberar() {
-      document.getElementById('bloqueio').style.display = 'none';
-      document.getElementById('conteudo').classList.remove('oculto');
+  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer>
 
-      // Reproduz música de fundo
-      const audio = new Audio('musica.mp3');
-      audio.loop = true;
-      audio.volume = 0.5;
-      audio.play();
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
