--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv nini <3</title>
+  <title>Yaisha</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -15,20 +15,18 @@
   <div id="conteudo" class="conteudo oculto">
     <div class="mural">
       <img src="yaisha.jpg" alt="Yaisha" class="foto" />
-      <h1>my girl</h1>
-      <p class="texto-romantico">hoje, no dia 16 de maio, de 2025, você faz aniversário, eu amo você, minha garota, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
+      <h1 class="titulo">my girl</h1>
+      <p class="texto-romantico">essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
       <a href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD?si=_LXeKYiLQrS0XCmZpchgKw&pi=eOdggg2FS2aWl" target="_blank" class="spotify-link">
         <i class="fab fa-spotify"></i>
       </a>
     </div>
 
     <div class="embed-musica">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EJMu857BvjtJD?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
-
-  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer>
-
-  <script src="script.js"></script>
+  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer> 
+   <script src="script.js"></script>
 </body>
 </html>
