--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="yaisha.jpg" alt="Yaisha" class="foto" />
       <h1 class="titulo">my girl</h1>
       <p class="texto-romantico">essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
-      <a href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD?si=_LXeKYiLQrS0XCmZpchgKw&pi=eOdggg2FS2aWl" target="_blank" class="spotify-link">
+      <a href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD" target="_blank" class="spotify-link">
         <i class="fab fa-spotify"></i>
       </a>
     </div>
@@ -26,7 +26,8 @@
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
-  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer> 
-   <script src="script.js"></script>
+
+  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer>
+  <script src="script.js"></script>
 </body>
 </html>
