--- a/index.html
+++ b/index.html
@@ -3,31 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv nini <3</title>
+  <title>i luv my gf <3</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="bloqueio" class="bloqueio">
-    <span class="letra" onclick="liberar()">&lt;3</span>
+  <div id="tela-inicial" class="fade-in">
+    <button id="botao-entrar" onclick="mostrarMural()">&lt;3</button>
   </div>
 
-  <div id="conteudo" class="conteudo oculto">
-    <div class="mural">
+  <div id="conteudo" class="oculto">
+    <div class="mural" onclick="ativarMural(this)">
       <img src="yaisha.jpg" alt="Yaisha" class="foto" />
-      <h1 class="titulo"><3</h1>
-      <p class="texto-romantico">essa garota, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu amo ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
-      <a href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD" target="_blank" class="spotify-link">
-        <i class="fab fa-spotify"></i>
-      </a>
-    </div>
-
-    <div class="embed-musica">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <h1>my girl</h1>
+      <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
 
-  <footer class="rodape">site feito com muito carinho, pelo pedro.</footer>
   <script src="script.js"></script>
 </body>
 </html>
