--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="bloqueio" class="bloqueio">
-    <span class="letra" onclick="liberar()">&lt;3</span>
+  <div id="confirmacao">
+    <h1>&lt;3</h1>
+    <button onclick="mostrarSite()">Entrar</button>
   </div>
 
-  <div id="conteudo" class="conteudo fade-in">
-    <div class="mural">
-      <img src="yaisha.jpg" alt="Yaisha" class="foto" />
-      <h1>my girl</h1>
-      <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
-
-      <div class="embed">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <div id="site">
+    <div class="container">
+      <div class="card">
+        <img src="yaisha.jpg" alt="Yaisha" />
+        <h2>my girl</h2>
+        <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
+        <div class="embed">
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
       </div>
-
-      <a class="spotify-icon" href="https://open.spotify.com/playlist/37i9dQZF1EJMu857BvjtJD?si=_LXeKYiLQrS0XCmZpchgKw&pi=eOdggg2FS2aWl" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Spotify_icon.svg" alt="Spotify">
-      </a>
     </div>
+    <footer>
+      <p>site feito com muito carinho, pelo pedro.</p>
+    </footer>
   </div>
 
-  <div class="rodape">
-    site feito com muito carinho, pelo pedro.
-  </div>
-
-  <script src="script.js"></script>
+  <script>
+    function mostrarSite() {
+      document.getElementById('confirmacao').style.display = 'none';
+      document.getElementById('site').style.display = 'flex';
+    }
+  </script>
 </body>
 </html>
