--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my gf <3</title>
+  <title>i luv my gf</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,18 +13,23 @@
   </div>
 
   <div id="site">
+    <audio autoplay loop hidden>
+      <source src="musica.mp3" type="audio/mpeg" />
+    </audio>
+
     <div class="container">
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>my girl</h2>
-        <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor ♥</p>
+        <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
+
     <footer>
-      <p>p+y=♥</p>
+      <p>p + y = ♥</p>
     </footer>
   </div>
 
