--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
   </div>
 
   <div id="site">
-    <audio autoplay loop hidden>
-      <source src="musica.mp3" type="audio/mpeg" />
-    </audio>
-
     <div class="container">
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>my girl</h2>
-        <p>...</p>
+        <p>essa garota acima é MUITO linda, e magnífica, eu AMO ela, hoje, no dia 16 de maio, de 2025, ela faz aniversário, eu AMO ela, eu sinceramente quero amar por toda a eternidade, yaisha, meu amor.</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
@@ -37,6 +33,10 @@
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
       document.getElementById('site').style.display = 'flex';
+
+      const audio = new Audio('musica.mp3');
+      audio.loop = true;
+      audio.play();
     }
   </script>
 </body>
