--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my gf</title>
+  <title>i luv my gf <3</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
-        <h2>♥</h2>
+        <h2>♡</h2>
         <p>...</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-      <p>p + y = ♥</p>
+      <p>p+y=♡</p>
     </footer>
   </div>
 
