--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="confirmacao">
     <h1>&lt;3</h1>
-    <button onclick="mostrarSite()">Entrar</button>
+    <button onclick="mostrarSite()">luv</button>
   </div>
 
   <div id="site">
