--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="confirmacao">
-    <button onclick="mostrarSite()">luv</button>
+    <button onclick="mostrarSite()">♡</button>
   </div>
 
   <div id="site">
