--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>♡</h2>
         <p>...</p>
-        <div class="vinil" id="disco"></div>
+        <div class="vinil" id="disco">
+          <div class="disco-interno"></div>
+        </div>
       </div>
     </div>
 
@@ -28,14 +30,12 @@
 
   <script>
     function mostrarSite() {
-      document.getElementById('confirmacao').style.display = 'none';
+      document.getElementById('conirmacao').style.display = 'none';
       document.getElementById('site').style.display = 'flex';
 
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
-
-      document.getElementById('disco').classList.add('girar');
     }
   </script>
 </body>
