--- a/index.html
+++ b/index.html
@@ -1,41 +1,37 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my gf</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div id="confirmacao">
-    <button onclick="mostrarSite()">luv</button>
-  </div>
+html= <!DOCTYPE html>
 
-  <div id="site">
-    <div class="container">
-      <div class="card">
-        <img src="yaisha.jpg" alt="Yaisha" />
-        <h2>♡</h2>
-        <p>...</p>
-        <div class="vinil" id="disco"></div>
-      </div>
-    </div>
+<html lang="pt-br">  
+<head>  
+  <meta charset="UTF-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+  <title>i luv my gf <3</title>  
+  <link rel="stylesheet" href="style.css" />  
+</head>  
+<body>  
+  <div id="confirmacao">  
+    <button onclick="mostrarSite()">luv</button>  
+  </div>    <div id="site">  
+    <div class="container">  
+      <div class="card">  
+        <img src="yaisha.jpg" alt="Yaisha" />  
+        <h2>♡</h2>  
+        <p>...</p>  
+        <div class="embed">  
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>  
+        </div>  
+      </div>  
+    </div>  <footer>  
+  <p>♡</p>  
+</footer>
 
-    <footer>
-      <p>♡</p>
-    </footer>
-  </div>
-
-  <script>
-    function mostrarSite() {
-      document.getElementById('confirmacao').style.display = 'none';
-      document.getElementById('site').style.display = 'flex';
-
-      const audio = new Audio('musica.mp3');
-      audio.loop = true;
-      audio.play();
-
-    }
-  </script>
-</body>
-</html>
+  </div>    <script>  
+    function mostrarSite() {  
+      document.getElementById('confirmacao').style.display = 'none';  
+      document.getElementById('site').style.display = 'flex';  
+  
+      const audio = new Audio('musica.mp3');  
+      audio.loop = true;  
+      audio.play();  
+    }  
+  </script>  </body>  
+</html>  
