--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <div class="card">  
         <img src="yaisha.jpg" alt="Yaisha" />  
         <h2>♡</h2>  
-        <p>...
-        feliz aniversário, meu amor, que hoje seja o melhor dia da sua vida, e espero que todos os dias da sua vida, sejam assim, eu te amo muito, yaisha, feliz aniversário ...</p>  
+        <p>...feliz aniversário, meu amor, que hoje seja o melhor dia da sua vida, e espero que todos os dias da sua vida, sejam assim, eu te amo muito, yaisha, feliz aniversário ...</p>  
         <div class="embed">  
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>  
         </div>  
