--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="confirmacao">
-    <button onclick="mostrarSite()">luv</button>
+    <h1>&lt;3</h1>
+    <button onclick="mostrarSite()">Entrar</button>
   </div>
 
   <div id="site">
@@ -16,7 +17,7 @@
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>♡</h2>
-        <p>...</p>
+        <p>... feliz aniversário, meu amor, que hoje seja repleto de felicidade no seu dia, e que hoje seja o melhor dia da sua vida!! eu espero que todos os seus dias, sejam os melhores da sua vida, eu agradeço muito por você existir, eu te amo, yaisha ♡.</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6tIoXcKI2qpMsXCdFP3Gi0?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
@@ -32,6 +33,7 @@
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
       document.getElementById('site').style.display = 'flex';
+
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
