--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>♡</h2>
-        <p>... 
-          feliz aniversário, meu amor, que hoje seja repleto de felicidade no seu dia, e que hoje seja o melhor dia da sua vida!! eu espero que todos os seus dias, sejam os melhores da sua vida, eu agradeço muito por você existir, eu te amo, yaisha ♡.</p>
+        <p>
+          feliz aniversário, meu amor, que hoje seja repleto de felicidade no seu dia, e que hoje seja o melhor dia da sua vida!! eu espero que todos os seus dias, sejam os melhores da sua vida, eu agradeço muito por você existir, eu te amo, yaisha ♡.
+        </p>
         <div class="embed">
-          <iframe style="border-radius:12px" src="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=M574NfM4TOW61IgBsS_AQA&pi=devM9Zc5QciJD" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7D2nPC3Psiiha3Tji7Zti0?utm_source=generator" width="100%" height="380" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
