--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my gf</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>i luv my girl</title>
+
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/1369127091442028707/1372713177070178395/67_Sem_Titulo_20250515201154.png?ex=6827c645&is=682674c5&hm=187fdc481df237e4cf478a1119eddf805aa7d007409210de39c77f267e2e91c6&" type="image/png" />
+
+  <meta property="og:title" content="i luv my girl" />
+  <meta property="og:description" content="<3" />
 </head>
 <body>
   <div id="confirmacao">
