--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>i luv my girl</title>
 
   <link rel="icon" href="https://cdn.discordapp.com/attachments/1369127091442028707/1372713177070178395/67_Sem_Titulo_20250515201154.png?ex=6827c645&is=682674c5&hm=187fdc481df237e4cf478a1119eddf805aa7d007409210de39c77f267e2e91c6&" type="image/png" />
-
   <meta property="og:title" content="i luv my girl" />
   <meta property="og:description" content="♡" />
+  <meta property="og:image" content="https://cdn.discordapp.com/attachments/1369127091442028707/1372713177070178395/67_Sem_Titulo_20250515201154.png?ex=6827c645&is=682674c5&hm=187fdc481df237e4cf478a1119eddf805aa7d007409210de39c77f267e2e91c6&" />
 </head>
 <body>
   <div id="confirmacao">
