--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my girl</title>
-
-  <link rel="icon" href="https://cdn.discordapp.com/attachments/1369127091442028707/1372713177070178395/67_Sem_Titulo_20250515201154.png?ex=6827c645&is=682674c5&hm=187fdc481df237e4cf478a1119eddf805aa7d007409210de39c77f267e2e91c6&" type="image/png" />
-  <meta property="og:title" content="i luv my girl" />
-  <meta property="og:description" content="♡" />
-  <meta property="og:image" content="https://cdn.discordapp.com/attachments/1369127091442028707/1372713177070178395/67_Sem_Titulo_20250515201154.png?ex=6827c645&is=682674c5&hm=187fdc481df237e4cf478a1119eddf805aa7d007409210de39c77f267e2e91c6&" />
+  <title>i luv my gf</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="confirmacao">
     <button onclick="mostrarSite()">luv</button>
-  </div>
-
-  <div id="site">
+  </div>  <div id="site">
     <div class="container">
       <div class="card">
         <img src="yaisha.jpg" alt="Yaisha" />
@@ -25,14 +19,11 @@
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
-    </div>
+    </div><footer>
+  <p>♡</p>
+</footer>
 
-    <footer>
-      <p>♡</p>
-    </footer>
-  </div>
-
-  <script>
+  </div>  <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
       document.getElementById('site').style.display = 'flex';
@@ -41,6 +32,5 @@
       audio.loop = true;
       audio.play();
     }
-  </script>
-</body>
+  </script></body>
 </html>
