--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <body>
   <div id="confirmacao">
     <button onclick="mostrarSite()">luv</button>
-  </div>  <div id="site">
+  </div>
+  <div id="site">
     <div class="container">
       <div class="card">
+        <span class="corner top-left">♡</span>
+        <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" />
-        <h2>♡</h2>
-        <p>feliz aniversário, meu amor, que hoje seja repleto de felicidade no seu dia, e que hoje seja o melhor dia da sua vida!! eu espero que todos os seus dias, sejam os melhores da sua vida, eu agradeço muito por você existir, eu te amo, yaisha ♡.</p>
+        <h2>minha garota que eu amo.</h2>
+        <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
+        <span class="corner bottom-left">♡</span>
+        <span class="corner bottom-right">♡</span>
       </div>
-    </div><footer>
-  <p>♡</p>
-</footer>
-
-  </div>  <script>
+    </div>
+    <footer>
+      <p>i luv my girl</p>
+    </footer>
+  </div>
+  <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
       document.getElementById('site').style.display = 'flex';
@@ -32,5 +38,6 @@
       audio.loop = true;
       audio.play();
     }
-  </script></body>
+  </script>
+</body>
 </html>
