--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <span class="corner top-left">♡</span>
         <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" />
-        <h2>minha garota que eu amo.</h2>
+        <h2>♡</h2>
+        <p>eu amo minha garota!</p>
         <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -26,7 +27,7 @@
       </div>
     </div>
     <footer>
-      <p>i luv my girl</p>
+      <p>♡</p>
     </footer>
   </div>
   <script>
