--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </div>
   <div id="site">
     <div class="container">
-      <div class="card">
+      <div class="card" onclick="animarCard(this)">
         <span class="corner top-left">♡</span>
         <span class="corner top-right">♡</span>
-        <img src="yaisha.jpg" alt="Yaisha" />
+        <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
         <h2>♡</h2>
-        <p>eu amo minha garota!</p>
+        <p>eu amo ela!!...<p>
         <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -38,6 +38,13 @@
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
+    }
+
+    function animarCard(card) {
+      card.classList.add('clicado');
+      setTimeout(() => {
+        card.classList.remove('clicado');
+      }, 600);
     }
   </script>
 </body>
