--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <span class="corner top-left">♡</span>
         <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
-        <h2>♡</h2>
-        <p>eu amo ela!!...<p>
+        <h2>minha garota &lt;3.</h2>
         <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -26,10 +25,12 @@
         <span class="corner bottom-right">♡</span>
       </div>
     </div>
+    <div class="heart-container"></div>
     <footer>
       <p>♡</p>
     </footer>
   </div>
+
   <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
@@ -38,13 +39,28 @@
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
+
+      setInterval(criarCoracao, 900);
     }
 
     function animarCard(card) {
       card.classList.add('clicado');
+      const perfil = card.querySelector('.perfil');
+      perfil.classList.add('girando');
       setTimeout(() => {
         card.classList.remove('clicado');
+        perfil.classList.remove('girando');
       }, 600);
+    }
+
+    function criarCoracao() {
+      const container = document.querySelector('.heart-container');
+      const heart = document.createElement('span');
+      heart.classList.add('floating-heart');
+      heart.style.left = Math.random() * 90 + "%";
+      heart.style.animationDuration = 4 + Math.random() * 2 + "s";
+      container.appendChild(heart);
+      setTimeout(() => heart.remove(), 6000);
     }
   </script>
 </body>
