--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="corner top-left">♡</span>
         <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
-        <h2>minha garota &lt;3.</h2>
+        <h2>minha garota <3.</h2>
         <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
