--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
   <div id="confirmacao">
     <button onclick="mostrarSite()">luv</button>
   </div>
+
   <div id="site">
+    <div class="hearts-container"></div>
+
     <div class="container">
       <div class="card" onclick="animarCard(this)">
         <span class="corner top-left">♡</span>
         <span class="corner top-right">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
-        <h2>minha garota <3.</h2>
-        <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
+        <h2>♡</h2>
+        <p class="texto">minha garota <3.</p>
+        <p class="emote">(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
@@ -25,7 +29,7 @@
         <span class="corner bottom-right">♡</span>
       </div>
     </div>
-    <div class="heart-container"></div>
+
     <footer>
       <p>♡</p>
     </footer>
@@ -40,25 +44,25 @@
       audio.loop = true;
       audio.play();
 
-      setInterval(criarCoracao, 900);
+      setInterval(criarCoracoes, 1000);
     }
 
     function animarCard(card) {
       card.classList.add('clicado');
-      const perfil = card.querySelector('.perfil');
-      perfil.classList.add('girando');
+      card.querySelector('.perfil').classList.add('girar');
       setTimeout(() => {
         card.classList.remove('clicado');
-        perfil.classList.remove('girando');
-      }, 600);
+        card.querySelector('.perfil').classList.remove('girar');
+      }, 800);
     }
 
-    function criarCoracao() {
-      const container = document.querySelector('.heart-container');
+    function criarCoracoes() {
+      const container = document.querySelector('.hearts-container');
       const heart = document.createElement('span');
-      heart.classList.add('floating-heart');
-      heart.style.left = Math.random() * 90 + "%";
-      heart.style.animationDuration = 4 + Math.random() * 2 + "s";
+      heart.textContent = '♡';
+      heart.className = 'float-heart';
+      heart.style.left = Math.random() * 100 + '%';
+      heart.style.animationDuration = (4 + Math.random() * 2) + 's';
       container.appendChild(heart);
       setTimeout(() => heart.remove(), 6000);
     }
