--- a/index.html
+++ b/index.html
@@ -3,33 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>i luv my gf</title>
+  <title>i luv my girl</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="confirmacao">
     <button onclick="mostrarSite()">luv</button>
   </div>
+
   <div id="site">
     <div class="container">
       <div class="card">
-        <span class="corner topleft">♡</span>
-        <span class="corner topright">♡</span>
-        <span class="corner bottomleft">♡</span>
-        <span class="corner bottomright">♡</span>
         <img src="yaisha.jpg" alt="Yaisha" />
         <h2>♡</h2>
-        <p>minha garota<3!!
-          (⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
+        <p>minha garota!! <3</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
       </div>
     </div>
+
     <footer>
       <p>♡</p>
     </footer>
   </div>
+
   <script>
     function mostrarSite() {
       document.getElementById('confirmacao').style.display = 'none';
