--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   </div>
   <div id="site">
     <div class="container">
-      <div class="card">
-        <span class="corner topleft">♡</span>
-        <span class="corner topright">♡</span>
-        <span class="corner bottomleft">♡</span>
-        <span class="corner bottomright">♡</span>
-        <img src="yaisha.jpg" alt="Yaisha" />
-        <h2>minha garota <3.</h2>
+      <div class="card" onclick="animarCard(this)">
+        <span class="corner top-left">♡</span>
+        <span class="corner top-right">♡</span>
+        <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
+        <h2>minha garota &lt;3.</h2>
         <p>(⁠っ⁠˘⁠з⁠(⁠˘⁠⌣⁠˘⁠ ⁠)</p>
         <div class="embed">
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
+        <span class="corner bottom-left">♡</span>
+        <span class="corner bottom-right">♡</span>
       </div>
     </div>
     <footer>
@@ -37,6 +37,13 @@
       const audio = new Audio('musica.mp3');
       audio.loop = true;
       audio.play();
+    }
+
+    function animarCard(card) {
+      card.classList.add('clicado');
+      setTimeout(() => {
+        card.classList.remove('clicado');
+      }, 600);
     }
   </script>
 </body>
