--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <img src="p&y.jpg" alt="Us" class="perfil" />
         <h2>us</h2>
         <p id="timer" class="timer"></p>
-        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto" id="cliqueTexto">✧⁠*⁠。clique aqui ° ✧⁠*</a>
+        <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto">✧⁠*⁠。clique aqui ° ✧⁠*</a>
+        <span class="barra"></span>
       </div>
     </div>
 
