--- a/index.html
+++ b/index.html
@@ -16,24 +16,20 @@
     <div class="container">
       <div class="card" onclick="animarCard(this)">
         <img src="yaisha.jpg" alt="Yaisha" class="perfil" />
-        <h2 class="titulo-card">
-          minha garota ♡ ...
-          <span class="listra-dir">______</span>
-        </h2>
+        <h2 class="titulo-card">minha garota ♡ ...</h2>
+        <div class="listra titulo-listra"></div>
         <p>eu amo ela !</p>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6jgkEbmQ2F2onEqsEhiliL?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
       </div>
 
       <div class="card" onclick="animarCard(this)">
         <img src="p&y.jpg" alt="Us" class="perfil" />
-        <h2 class="titulo-card">
-          us
-          <span class="listra-dir">______</span>
-        </h2>
+        <h2 class="titulo-card">us</h2>
+        <div class="listra titulo-listra"></div>
         <p id="timer" class="timer"></p>
         <div class="clique-container">
-          <span class="listra-esq">______</span>
           <a href="https://open.spotify.com/playlist/7D2nPC3Psiiha3Tji7Zti0?si=EwDyxB1HQfa1CgkVl91eFQ" target="_blank" class="clique-texto">✧⁠*⁠。clique aqui  ° ✧⁠*</a>
+          <div class="listra clique-listra"></div>
         </div>
       </div>
     </div>
